fix: suppress TS errors in ListingsV2Controller test file
